--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2659,7 +2659,7 @@ input, select, textarea {
 			}
 
 		.mini-post header {
-			padding: 0em 1.25em 0em 1.25em ;
+			padding: 0em 0.25em 0em 0.25em ;
 			min-height: 1em;
 			position: sticky;
 			-moz-flex-grow: 1;
@@ -2669,15 +2669,16 @@ input, select, textarea {
 		}
 
 			.mini-post header h3 {
-				font-size: 1.3em;
+				font-size: .9em;
+				letter-spacing: -0.25em;
 			}
 
 			.mini-post header .published {
 				display: block;
-				font-family: Helvetica, sans-serif;
+				font-family: Bold, Helvetica, sans-serif;
 				font-size: .65em;
 				font-weight: 400;
-				letter-spacing: 0.2em;
+				letter-spacing: 0em;
 				margin: -0.625em 0 0.7em 6.2em;
 				text-transform: capitalize;
 			}
@@ -3157,7 +3158,7 @@ input, select, textarea {
 		}
 
 			#header h1 a {
-				font-size: 0.60em;
+				font-size: 1em;
 			}
 
 		#header .links {
@@ -3189,7 +3190,7 @@ input, select, textarea {
 				#header .links ul li a {
 					border-bottom: 0;
 					font-family: Helvetica, sans-serif;
-					font-size: 0.6em;
+					font-size: 1em;
 					font-weight: 400;
 					letter-spacing: 0.25em;
 					text-transform: uppercase;
